--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Code 301 Class 6 Demo - Server Side",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Calvin Cheng",
   "license": "MIT",
